<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Permissions -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="welcome_to_floria_title">Welcome to Floria</string>
    <string name="add_product_title"> Add Products</string>
    <string name="price">Price</string>
    <string name="Arabic">العربية</string>
    <string name="English">English</string>
    <string name="money">Financial</string>
    <string name="products">Products</string>
    <string name="orders">Orders</string>
    <string name="settings">Settings</string>
    <string name="flower_types">Flower Types</string>
    <string name="title_complain">Enter Title more than 3 characters</string>
    <string name="message_complain">Please insert at least 3 characters and max 250 char</string>
    <string name="reply_title">Write your reply here </string>

    <string name="services_title">Bills</string>

    <string name="apartment_number_title">Apartment number </string>
    <string name="in_progress_title">In Progress</string>
    <string name="shipped_title">Shipped</string>
    <string name="deliverd_title">Delivered </string>
    <string name="canceld_title">Cancelled </string>
    <string name="fawry">Fawry</string>
    <string name="cash">Cash</string>
    <string name="visa">Visa</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="change_language">Change Language</string>
    <string name="sure">Are you sure , Application will start in Case confirmation ?</string>

    <string name="are_you_sure_you_want_to_cancel_order_title">Are you sure you want to cancel this order  ?</string>
    <string name="no_title">NO</string>
    <string name="yes_title">YES</string>
    <string name="apartment_number">Apartment Number</string>
    <string name="status">Status</string>
    <string name="total_orders_by_visa_title">Total Orders By visa</string>
    <string name="floria">Floria</string>
    <string name="you">You</string>
    <string name="your_salary_from_order_title">Your Salary from Order</string>
    <string name="log_out">Sign Out</string>
    <string name="are_you_sure">Are you sure you want to Sign Out ?</string>
    <string name="please_try_again_later">Please Try again later</string>
    <string name="error_in_password_or_telephone_number_title" translatable="false">error in password or telephone number</string>
    <string name="questions_on_product_15_question_title">Questions on Product </string>
    <string name="have_a_question_title">Have a Question?</string>
    <string name="size_title">size</string>
    <string name="quantity_title">quantity</string>
    <string name="egp">SAR</string>

    <string name="search_for_product_title">Search about product or service</string>
    <string name="show_all_title"><u>Show All</u></string>
    <string name="best_food_title">Best Food</string>
    <string name="all_food_is_awesome_subtitle">All food is awesome</string>
    <string name="loading">Loading</string>
    <string name="done_sending_verification_code_title">Done Sending Verification Code</string>
    <string name="enter_4_digits_of_verification_code_title">Enter 4 digits of verification code</string>
    <string name="resend_verification_code_title"><u>resend Verification Code</u></string>
    <string name="confirm_title">Confirm</string>
    <string name="please_wait_45_second">please wait 45 second</string>
    <string name="timer_title">wait for </string>
    <string name="seconds_title">Seconds</string>
    <string name="delete_product_title">Are you sure from deleting this product ?</string>
    <string name="cancel_title">Cancel</string>
    <string name="delete_title">Delete</string>
    <string name="done_adding_to_your_cart">Product has been added to cart successfully</string>
    <string name="go_to_cart_title">Go to Cart</string>
    <string name="questions">questions</string>
    <string name="try_again_with_customer" />
    <string name="see_more">See More</string>
    <string name="showLess">Show Less</string>
    <string name="order_price_title">Order Price</string>
    <string name="promo_code_title">Promo code</string>
    <string name="Delivery_price">Delivery Price</string>
    <string name="total_money_title">Total Money</string>
    <string name="next">Next</string>
    <string name="order_product_title">Order Product</string>
    <string name="detect_order_time_title">Detect Order Time</string>
    <string name="please_choose_time">Please choose time</string>
    <string name="_12_00_pm">12:00 PM</string>
    <string name="notes_title">Notes</string>
    <string name="add_your_notes_on_order">Add Notes on your order</string>
    <string name="add">Add</string>
    <string name="enter_notes" />
    <string name="done_order">Done order</string>
    <string name="processing_title">Processing</string>
    <string name="delivering_title">Delivering</string>
    <string name="deliverd">Deliverd</string>
    <string name="money_needed">Money</string>
    <string name="sha7n">money shippment</string>
    <string name="discount">Discount</string>
    <string name="upload_photo_of_receipt_title">Upload photo of receipt</string>
    <string name="change_password">Change Password</string>
    <string name="old_password_title">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password_title">Confirm Password</string>
    <string name="save">Save</string>
    <string name="attachment">Attachment</string>
    <string name="attach">Attach</string>
    <string name="document">Document</string>
    <string name="account_number">"Account Number "</string>
    <string name="accepted">accepted</string>
    <string name="enter_missing">Enter Missing Fields Please</string>
    <string name="tax_money_title">Tax Money</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="please_enter_your_number">Please Enter Your number</string>
    <string name="send">Send</string>
    <string name="retry_password">retry Password</string>
    <string name="how_was_your_order">How was your order</string>
    <string name="your_opinion_is_important_to_us">Your opinion is important to us</string>
    <string name="rate_order_now">Rate order Now</string>
    <string name="rate_order">Rate Order</string>
    <string name="rate_your_order">rate your order</string>
    <string name="write_your_comment_here">write your comment here</string>
    <string name="rate_your_delivery">Rate your Delivery</string>
    <string name="rating">Please provide Rating</string>
    <string name="enter_comments">Enter Comments please</string>
    <string name="notification_id" translatable="false">2</string>
    <string name="choose_language">Choose Language</string>
    <string name="done_sending_your_question">Done Sending your Question</string>
    <string name="thanks_for_reaching_us_out">Thanks for reaching us out</string>
    <string name="sign_in">Sign In</string>
    <string name="skip">Skip</string>
    <string name="unauthenticated_string" translatable="false">Unauthenticated.</string>
    <string name="signIn_first">Sign In First Please !</string>
    <string name="Loading">Loading....</string>
    <string name="confirm_message">New Password and Confirmed Password are not the same</string>
    <string name="enter_8_character">Enter at least 8 characters for Password</string>
    <string name="congratulations">Congratulation !</string>
    <string name="changed_password_success">Done Changing Password Successfully</string>
    <string name="done_reset_password">Done Resetting your Password</string>
    <string name="done_favourites">Product has been added to favorites successfully</string>
    <string name="done_verification">Congratulation on Activating your account</string>
    <string name="one_question">question</string>
    <string name="totalorder">totalORder</string>
    <string name="price_title">Price</string>
    <string name="discount_title">Discount</string>
    <string name="total_receipt">Total receipt</string>
    <string name="tax_title">Tax</string>
    <string name="delivery_title">Delivery</string>
    <string name="activate">Activate</string>
    <string name="change_status">change Order Status</string>

    <string name="new_word">New</string>
    <string name="accept_word">Acceptd</string>
    <string name="prepare_word">Prepared</string>
    <string name="ready_ship_word"> Shipped</string>
    <string name="ready_deliver">Deliverd</string>
    <string name="ready_done">Done </string>
    <string name="no_notes">No Notes</string>
    <string name="add_photo">Add photo for product (png,jpeg)</string>
    <string name="product_status">Product status</string>

    <string name="client">عميل</string>
    <string name="sales">مبيعات</string>
    <string name="complete_orders">طلبات مكتمله</string>
    <string name="credit_card">بطاقة الدفع</string>
    <string name="bank_transfer">تحويل بنكي</string>
    <string name="edit_product">edit Product</string>
    <string name="duplicate_product">Duplicate Product</string>
    <string name="copy_url">Copy Url</string>
    <string name="delete_product">Delete Product</string>
    <string name="delete_product_all">Delete all products</string>
    <string name="store_data">Store Data</string>
    <string name="complete_data">Complete Data</string>
    <string name="payment_data">Payment Data</string>
    <string name="store_created">Created</string>

    <string name="name_store_arabic">Name of Store (arabic language)</string>
    <string name="name_store_english">Name of Store (English Language)</string>
    <string name="description_store">Description Store (Arabic Language)</string>
    <string name="description_store_en">Description Store (English Language)</string>

    <string name="tax_number">الرقم الضريبي</string>
    <string name="registered_number">رقم التسجيل في معروف</string>
    <string name="address">العنوان</string>
    <string name="select_your_address">حدد عنوانك علي الخريطة</string>

</resources>