<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/insent_dialog"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/edit_product"
        android:id="@+id/tV_edit_product"
        android:padding="5dp"
        android:drawableStart="@drawable/ic_edit_icon"
        android:drawablePadding="5dp"
        android:fontFamily="@font/din_arabic_regular"
        android:layout_margin="15dp"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tV_edit_product"
        android:text="@string/duplicate_product"
        android:id="@+id/tV_duplicate_product"
        android:drawableStart="@drawable/ic_duplicate"
        android:drawablePadding="5dp"
        android:fontFamily="@font/din_arabic_regular"
        android:padding="5dp"
        android:layout_margin="15dp"

        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tV_duplicate_product"
        android:text="@string/copy_url"
        android:id="@+id/tV_copy_url"
        android:padding="5dp"
        android:layout_margin="15dp"

        android:drawableStart="@drawable/ic_url"
        android:drawablePadding="5dp"
        android:fontFamily="@font/din_arabic_regular"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tV_copy_url"
        android:text="@string/delete_product"
        android:textColor="@color/red_color"
        android:id="@+id/tV_delete_product"
        android:padding="5dp"
        android:drawableStart="@drawable/ic_edit_icon"
        android:drawablePadding="5dp"
        android:fontFamily="@font/din_arabic_regular"
        android:layout_margin="15dp"

        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tV_delete_product"
        android:text="@string/delete_product_all"
        android:textColor="@color/red_color"
        android:id="@+id/tV_delete_all_products"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="15dp"
        android:drawableStart="@drawable/ic_edit_icon"
        android:drawablePadding="5dp"
        android:fontFamily="@font/din_arabic_regular"
        />



</androidx.constraintlayout.widget.ConstraintLayout>