<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/insent_dialog">

    <ImageView
        android:id="@+id/tv_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="15dp"
        android:padding="8dp"
        android:visibility="gone"
        android:src="@drawable/ic_icon_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/change_password"
        android:textStyle="bold"
        android:fontFamily="@font/din_arabic_bold"
        android:textColor="@color/blackish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.test.utils.custom.CustomTitleEditBox
        android:id="@+id/custom_password_old"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:text="@string/old_password_title"
        app:isPassword="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />


    <com.test.utils.custom.CustomTitleEditBox
        android:id="@+id/custom_password_new"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:text="@string/new_password"
        app:isPassword="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_password_old" />


    <com.test.utils.custom.CustomTitleEditBox
        android:id="@+id/custom_password_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:text="@string/confirm_password_title"
        app:isPassword="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_password_new" />



        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_password_confirm"
        android:layout_margin="15dp"
        android:id="@+id/btn_save"
        android:text="@string/save"
            android:fontFamily="@font/din_arabic_regular"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        android:backgroundTint="@color/teaBlue">

    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>