<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_was_your_order"
        android:fontFamily="@font/din_arabic_bold"
        android:textColor="@color/brownishGray"
        android:drawableStart="@drawable/ic_star"
        android:gravity="center"
        android:drawablePadding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tv_rate_title"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rate_title"
        android:layout_marginTop="10dp"
        android:id="@+id/tv_rate_subtitle"
        android:textColor="@color/gray138"
        android:fontFamily="@font/din_arabic_regular"
        android:text="@string/your_opinion_is_important_to_us"
        />
    <Button
        android:layout_width="0dp"
        android:id="@+id/btn_rate"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rate_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/teaBlue"
        android:fontFamily="@font/din_arabic_regular"
        android:text="@string/rate_order_now"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="25dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>