<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_bg">


    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/teaBlue"
        android:text="@string/confirm_title"
        android:fontFamily="@font/din_arabic_regular"
        android:textAllCaps="false"
        android:id="@+id/btn_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_resend_verification"

        />


    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_verification_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:text="@string/enter_4_digits_of_verification_code_title"
        android:textColor="@color/gray112"
        android:fontFamily="@font/din_arabic_regular"

        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pin_code" />

    <TextView
        android:id="@+id/tv_resend_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/resend_verification_code_title"
        android:textColor="@color/teaBlue"
        android:fontFamily="@font/din_arabic_regular"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resned" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_timer"
        tools:text="@string/please_wait_45_second"
        android:textColor="@color/colorgray"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_resend_verification"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/din_arabic_regular"
        app:layout_constraintStart_toEndOf="@id/tv_resend_verification"
        app:layout_constraintTop_toTopOf="@id/tv_resend_verification" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/din_arabic_bold"
        android:text="@string/done_sending_verification_code_title"
        android:textColor="@color/teaBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:drawableEndCompat="@drawable/ic_icn_check" />


    <com.chaos.view.PinView
        android:id="@+id/pin_code"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:cursorVisible="true"
        android:inputType="number"
        android:textColor="@color/teaBlue"
        app:viewType="rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_error"
        app:lineColor="@color/teaBlue"
        app:itemSpacing="15dp"
        app:lineWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>