<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/insent_dialog">

    <ImageView
        android:id="@+id/tv_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:padding="14dp"
        android:visibility="gone"
        android:src="@drawable/ic_icon_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/notes_title"
        android:src="@drawable/ic_forget_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_forget_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/din_arabic_regular"
        android:layout_marginTop="10dp"
        android:text="@string/forget_password"
        android:textColor="@color/teaBlue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />


    <TextView
        android:layout_width="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:fontFamily="@font/din_arabic_regular"
        android:text="@string/please_enter_your_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forget_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:id="@+id/tv_forget_subtitle"
        />


    <com.test.utils.custom.CustomTelephone
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_custom_telephone"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:inputType="phone"
        android:maxLength="15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forget_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_custom_telephone"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/send"
        android:textAllCaps="false"
        android:fontFamily="@font/din_arabic_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:id="@+id/btn_send"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/teaBlue"
        android:textColor="@color/colorWhite"
        />

</androidx.constraintlayout.widget.ConstraintLayout>