<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/insent_dialog"

    >

    <ImageView
        android:id="@+id/tv_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="15dp"
        android:padding="8dp"
        android:src="@drawable/ic_icon_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/notes_title"
        android:textStyle="bold"
        android:fontFamily="@font/din_arabic_bold"
        android:textColor="@color/blackish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_notes"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_margin="15dp"
        android:gravity="start"
        android:textSize="14sp"
        android:fontFamily="@font/din_arabic_regular"
        android:hint="@string/add_your_notes_on_order"
        android:textColorHint="@color/grayish"
        android:background="@drawable/box_edit_text"
        android:textColor="@color/blackish"
        android:padding="5dp"
        android:maxLength="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_notes"
        android:layout_margin="15dp"
        android:id="@+id/btn_add"
        android:text="@string/add"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        android:backgroundTint="@color/teaBlue"
        >

    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>